# dc-pizzameter

./: composer.json  package-lock.json  package.json
app/Http/Controllers/: EmailPreviewController.php  NewsletterController.php  PopularTimesController.php
app/Models/: Location.php  PopularityAverage.php  PopularityData.php
app/Services/: EmailService.php  PopularTimesService.php  PopularityAverageService.php
config/: newsletter.php
database/migrations/: 2024_08_24_230309_create_locations_table.php  2024_08_24_234322_create_popularity_data_table.php  2024_08_25_010403_create_popularity_averages_table.php  2024_08_25_170429_add_counts_to_popularity_averages_table.php  2024_08_27_180413_add_event_probability_tier_to_popularity_averages_table.php
database/seeders/: LocationsTableSeeder.php
resources/css/: app.css
resources/js/: bootstrap.js
resources/js/Components/: BarActivity.jsx  EmailSubscribe.jsx  Explanation.jsx  Footer.jsx  Hero.jsx  Logo.jsx  Navbar.jsx  PizzaBackground.jsx  PizzaDeliveries.jsx  PizzaTracker.jsx
resources/js/Pages/: Contact.jsx  Welcome.jsx
resources/python/: main.py
resources/views/emails/: event-probability-alert.blade.php
routes/: console.php  web.php
scripts/LivePopularTimes/: main.py  pyproject.toml
